[gd_scene load_steps=5 format=3 uid="uid://bi37nxb5r17kt"]

[ext_resource type="Script" uid="uid://lwin81crpjti" path="res://scenes/GUI/shared/descriptions/gui_ball_description.gd" id="1_jtfsj"]
[ext_resource type="PackedScene" uid="uid://drf3tx11kw0i3" path="res://scenes/GUI/bingo_main/draw_box/gui_bingo_ball.tscn" id="2_ifvl2"]
[ext_resource type="PackedScene" uid="uid://bfye3pwakcidx" path="res://scenes/GUI/shared/descriptions/gui_tooltip_description_separator.tscn" id="4_h04sn"]
[ext_resource type="PackedScene" uid="uid://defua0wjy7nqc" path="res://scenes/GUI/shared/descriptions/gui_description_rich_text_label.tscn" id="4_ibygh"]

[node name="GUIBallDescription" type="VBoxContainer"]
custom_minimum_size = Vector2(56, 0)
offset_right = 57.0
offset_bottom = 44.0
theme_override_constants/separation = 2
script = ExtResource("1_jtfsj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="GUIBingoBall" parent="HBoxContainer/VBoxContainer2" instance=ExtResource("2_ifvl2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
enable_tooltips = false

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"HUD_mid"
text = "Egg"
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 2

[node name="TypeLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
theme_type_variation = &"LabelQuality"
text = "123"
vertical_alignment = 1

[node name="GUITooltipDescriptionSaparator" parent="." instance=ExtResource("4_h04sn")]
unique_name_in_owner = true
layout_mode = 2

[node name="GUIDescriptionRichTextLabel" parent="." instance=ExtResource("4_ibygh")]
unique_name_in_owner = true
layout_mode = 2

[node name="RulesContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 10

[node name="LeftRulesContainer" type="HBoxContainer" parent="RulesContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 0

[node name="RightRulesContainer" type="HBoxContainer" parent="RulesContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 0
